@@ -1,6 +1,7 @@
-- New Fixture: School Time option for Party Contact Type
+- New Feature: School Time option for Party Contact Type
 - Refactor: preparation for making AcademicCalendarEntry support variable periods, without need of subclasses
 - Refactor: added implementations of ExecutionInterval former abstract methods: getChildOrder(), getNext(), getPrevious(), getQualifiedName() and isCurrent()
+- Refactor: disabled deprecated ExecutionSemester methods
 
 25.3.0 (21-11-2019)
 - Bug Fix: Fixed access to CompetenceCourse details functionality 
